fixes spacing on h1 on timeline

--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -35,7 +35,7 @@ $font-size-14: 0.875rem;
 
 h1 {
   font-size: 2.75rem;
-  margin-bottom: 1.5rem;
+  margin-bottom: 1.125rem;
   text-align: center;
 }
 
