--- a/app/assets/stylesheets/pages/_all_tasks.scss
+++ b/app/assets/stylesheets/pages/_all_tasks.scss
@@ -13,3 +13,7 @@
     left: 1px;
   }
 }
+
+h1.timeline {
+  margin-bottom: 0;
+}
